--- a/config/content.htm
+++ b/config/content.htm
@@ -1253,7 +1253,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>Plastique Flipper_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/f6k1FE3Qi5c" title="W11_4前面" width="1020"></iframe></p>
 <p>Support Bobine_sldprt.prt: <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/lx7tAc5LZXI" title="SolveSpace   new sketch 2024 11 30 00 53 38" width="1020"></iframe></p>
 <h3>w11組合影片</h3>
-<p>檔案下載:</p>
+<p>檔案下載:<a href="/downloads/W11_組合檔下載.zip">/downloads/W11_組合檔下載.zip</a></p>
 <script src="/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part1-0.1.stl">模型1</a> <!-- 第一題的模型 --></div>
