--- a/content/w11組合影片.html
+++ b/content/w11組合影片.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W11影片連結 << <a href='W11影片連結.html'>Previous</a> <a href='W12_ch.html'>Next</a> >> W12_ch<br /><h1>w11組合影片</h1>
-<p>檔案下載:</p>
+<p>檔案下載:<a href="./../downloads/W11_組合檔下載.zip">/downloads/W11_組合檔下載.zip</a></p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223131/41223131_part1-0.1.stl">模型1</a> <!-- 第一題的模型 --></div>
