--- a/content/W14.html
+++ b/content/W14.html
@@ -2,7 +2,7 @@
         <head>
         <title>cad_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,10 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>w10NX</h1>
-<p>W10的考試利用NX來畫並且測試</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="514" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/sl3TUBU5-rI" title="W10 NX的操作影片" width="956"></iframe></p>
-<br />w10 << <a href='w10.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+    <div id="tipue_search_content">W13 << <a href='W13.html'>Previous</a> <a href='W15.html'>Next</a> >> W15<br /><h1>W14</h1>
+<p><em><strong>1.</strong></em><span>利用 STL 檔案</span><span>建立 CoppeliaSim 模擬場景</span><span>的過程：</span></p>
+<p><span>半成品閃退問題</span></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ktpAQnj2rPI" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w14: 41223131" width="560"></iframe></p><br />W13 << <a href='W13.html'>Previous</a> <a href='W15.html'>Next</a> >> W15</div>
         
     <!-- footer -->
       <div class="container">
