--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1782,6 +1782,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p style="padding-left: 30px;">所完成的模擬場景與控制程式檔案下載</p>
 <h3>W16_exam3</h3>
 <p>沒程式的控制</p>
+<p><a href="/downloads/41223131_w16_exam3.zip">41223131_w16_exam3.zip</a></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/y163RNbWG6k" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w16_exam3: 41223131" width="560"></iframe></p><h1>Final Report</h1>
 <p>期末口頭與書面專題報告 (30%)</p>
 <p>期末口頭專題報告影片:</p>
