--- a/content/W14.html
+++ b/content/W14.html
@@ -145,7 +145,8 @@ img.add_border {
 <p><em><strong>1.</strong></em><span>利用 STL 檔案</span><span>建立 CoppeliaSim 模擬場景</span><span>的過程：</span></p>
 <p><span>半成品閃退問題</span></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/ktpAQnj2rPI" title="國立虎尾科技大學機械設計工程系 - 電腦輔助設計與實習 - w14: 41223131" width="560"></iframe></p>
-<br />W13 << <a href='W13.html'>Previous</a> <a href='W15.html'>Next</a> >> W15</div>
+<p>完成的:</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/JenkZD1Q1Mc" title="W14完成的影片" width="560"></iframe></p><br />W13 << <a href='W13.html'>Previous</a> <a href='W15.html'>Next</a> >> W15</div>
         
     <!-- footer -->
       <div class="container">
